Fix title overlap on large res

--- a/client/src/pages/Home/HomePage.css
+++ b/client/src/pages/Home/HomePage.css
@@ -170,7 +170,6 @@ body {
 }
 .header-heading {
   padding-left: 10% !important;
-  margin-top: 50px;
 }
 .image-padding {
   padding-left: 5% !important;
@@ -581,7 +580,7 @@ nav {
     margin-top: -15%;
   }
   .header-heading h1 {
-    font-size: 58px;
+    font-size: 50px;
   }
   .header-heading h4 {
     font-size: 30px;
